# RecipeSearchEngine

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.html  README.md  code_analysis.py  modules.html  pyproject.toml  userguide.html
_sources/: modules.rst.txt
docs/: tutorial.md
docs/source/: conf.py  searchengine.rst
elasticsearch/: docker-compose.yml
src/searchengine/: api.py  indexing.py  recipes.json
tests/: test_api.py
